<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GetLocationActivity">

    <RelativeLayout
        android:id="@+id/intern_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/general_info" />

        <EditText
            android:id="@+id/et_latitude"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_info1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="numberSigned|numberDecimal" />

        <EditText
            android:id="@+id/et_longitude"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_latitude"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/tv_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_longitude"
            android:text="@string/label_info" />

        <EditText
            android:id="@+id/et_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_info2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/label_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_label"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:text="@string/search" />

        <TextView
            android:id="@+id/tv_info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_search"
            android:text="@string/get_location_info" />

        <Button
            android:id="@+id/btn_get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_info3"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            android:text="@string/get_location_btn" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>